# src/kafka/controllers/kafkaController.js
@@ -4,7 +4,7 @@ const kafkaManager = require('../models/kafkaManager');
 
 module.exports.getTopics = async (req, res, next) => {
     try {
-        const topics = await kafkaManager.getTopics();
+        const topics = await kafkaManager.getTopics(req.query.brokers);
         res.status(200).json(topics);
     } catch (error) {
         next(error);
@@ -13,7 +13,7 @@ module.exports.getTopics = async (req, res, next) => {
 
 module.exports.getConsumerGroups = async (req, res, next) => {
     try {
-        const groups = await kafkaManager.getConsumerGroups();
+        const groups = await kafkaManager.getConsumerGroups(req.query.brokers);
         res.status(200).json(groups);
     } catch (error) {
         next(error);
